Update build.xml
adding  jdk.management.jfr to modules in javac