@@ -2,11 +2,16 @@
   <description>
     simple example build file
   </description>
-  <!-- set global properties for this build -->
+   
+	<resources id='javac.compiler.args.parts.collection'>
+		<string value="--add-modules jdk.management.jfr" />
+  </resources>
+  <property name="javac.compiler.args" value="-version ${javac.compiler.args.parts}"/>
+  
   <property name="src" location="src"/>
   <property name="build" location="build"/>
   <property name="dist" location="dist"/>
-
+    
   <target name="init">
     <!-- Create the time stamp -->
     <tstamp/>
@@ -17,7 +22,9 @@
   <target name="compile" depends="init"
         description="compile the source">
     <!-- Compile the Java code from ${src} into ${build} -->
-    <javac srcdir="${src}" destdir="${build}"/>
+    <javac srcdir="${src}" destdir="${build}">
+			<compilerarg line="${javac.compiler.args}"/>      
+    </javac/
   </target>
 
   <target name="dist" depends="compile"
